--- a/Astra/Astra.vcxproj
+++ b/Astra/Astra.vcxproj
@@ -153,6 +153,8 @@ IF EXIST res\fonts\**.ttf\ (xcopy /Q /E /Y /I res\fonts\**.ttf ..\bin\windows-Di
     <ClInclude Include="src\Astra\Application.h" />
     <ClInclude Include="src\Astra\Core.h" />
     <ClInclude Include="src\Astra\EntryPoint.h" />
+    <ClInclude Include="src\Astra\graphics\entities\utility\Mesh.h" />
+    <ClInclude Include="src\Astra\graphics\entities\utility\Model.h" />
     <ClInclude Include="src\Astra\Log.h" />
     <ClInclude Include="src\Astra\Scene.h" />
     <ClInclude Include="src\Astra\Window.h" />
@@ -277,6 +279,8 @@ IF EXIST res\fonts\**.ttf\ (xcopy /Q /E /Y /I res\fonts\**.ttf ..\bin\windows-Di
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Astra\Application.cpp" />
+    <ClCompile Include="src\Astra\graphics\entities\utility\Mesh.cpp" />
+    <ClCompile Include="src\Astra\graphics\entities\utility\Model.cpp" />
     <ClCompile Include="src\Astra\Log.cpp" />
     <ClCompile Include="src\Astra\audio\AudioController.cpp" />
     <ClCompile Include="src\Astra\audio\AudioSource.cpp" />
