--- a/Astra/Astra.vcxproj.filters
+++ b/Astra/Astra.vcxproj.filters
@@ -477,6 +477,8 @@
     <ClInclude Include="vendor\stb_image\stb_image\stb_image.h">
       <Filter>vendor\stb_image\stb_image</Filter>
     </ClInclude>
+    <ClInclude Include="src\Astra\graphics\entities\utility\Mesh.h" />
+    <ClInclude Include="src\Astra\graphics\entities\utility\Model.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Astra\Application.cpp">
@@ -686,6 +688,8 @@
     <ClCompile Include="vendor\stb_image\stb_image\stb_image.cpp">
       <Filter>vendor\stb_image\stb_image</Filter>
     </ClCompile>
+    <ClCompile Include="src\Astra\graphics\entities\utility\Mesh.cpp" />
+    <ClCompile Include="src\Astra\graphics\entities\utility\Model.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="res\fonts\calibri.ttf">
