Astra-70-Refactored Entity into Model with children Meshes and fully implemented assimp model loading.

--- a/Astra/Astra.vcxproj
+++ b/Astra/Astra.vcxproj
@@ -153,11 +153,6 @@ IF EXIST res\fonts\**.ttf\ (xcopy /Q /E /Y /I res\fonts\**.ttf ..\bin\windows-Di
     <ClInclude Include="src\Astra\Application.h" />
     <ClInclude Include="src\Astra\Core.h" />
     <ClInclude Include="src\Astra\EntryPoint.h" />
-    <ClInclude Include="src\Astra\graphics\guis\ToggleButton.h" />
-    <ClInclude Include="src\Astra\graphics\renderers\SelectionRenderer.h" />
-    <ClInclude Include="src\Astra\graphics\shaders\BasicEntityShader.h" />
-    <ClInclude Include="src\Astra\graphics\entities\utility\Mesh.h" />
-    <ClInclude Include="src\Astra\graphics\entities\utility\Model.h" />
     <ClInclude Include="src\Astra\Log.h" />
     <ClInclude Include="src\Astra\Scene.h" />
     <ClInclude Include="src\Astra\Window.h" />
@@ -177,7 +172,6 @@ IF EXIST res\fonts\**.ttf\ (xcopy /Q /E /Y /I res\fonts\**.ttf ..\bin\windows-Di
     <ClInclude Include="src\Astra\graphics\buffers\WaterFrameBuffer.h" />
     <ClInclude Include="src\Astra\graphics\entities\Camera.h" />
     <ClInclude Include="src\Astra\graphics\entities\DirectionalLight.h" />
-    <ClInclude Include="src\Astra\graphics\entities\Entity.h" />
     <ClInclude Include="src\Astra\graphics\entities\Light.h" />
     <ClInclude Include="src\Astra\graphics\entities\PointLight.h" />
     <ClInclude Include="src\Astra\graphics\entities\Spatial.h" />
@@ -185,6 +179,8 @@ IF EXIST res\fonts\**.ttf\ (xcopy /Q /E /Y /I res\fonts\**.ttf ..\bin\windows-Di
     <ClInclude Include="src\Astra\graphics\entities\terrains\HeightGenerator.h" />
     <ClInclude Include="src\Astra\graphics\entities\terrains\Terrain.h" />
     <ClInclude Include="src\Astra\graphics\entities\terrains\WaterTile.h" />
+    <ClInclude Include="src\Astra\graphics\entities\utility\Mesh.h" />
+    <ClInclude Include="src\Astra\graphics\entities\utility\Model.h" />
     <ClInclude Include="src\Astra\graphics\gizmos\Gizmo.h" />
     <ClInclude Include="src\Astra\graphics\gizmos\GizmoController.h" />
     <ClInclude Include="src\Astra\graphics\guis\Button.h" />
@@ -195,6 +191,7 @@ IF EXIST res\fonts\**.ttf\ (xcopy /Q /E /Y /I res\fonts\**.ttf ..\bin\windows-Di
     <ClInclude Include="src\Astra\graphics\guis\Panel.h" />
     <ClInclude Include="src\Astra\graphics\guis\Spatial2D.h" />
     <ClInclude Include="src\Astra\graphics\guis\TextBox.h" />
+    <ClInclude Include="src\Astra\graphics\guis\ToggleButton.h" />
     <ClInclude Include="src\Astra\graphics\guis\utility\FontAtlas.h" />
     <ClInclude Include="src\Astra\graphics\guis\utility\FontStructs.h" />
     <ClInclude Include="src\Astra\graphics\guis\utility\Rect2.h" />
@@ -270,6 +267,7 @@ IF EXIST res\fonts\**.ttf\ (xcopy /Q /E /Y /I res\fonts\**.ttf ..\bin\windows-Di
     <ClInclude Include="src\Astra\utils\StringUtils.h" />
     <ClInclude Include="src\Astra\utils\Timer.h" />
     <ClInclude Include="src\Astra\utils\Timestep.h" />
+    <ClInclude Include="src\Astra\utils\Unique.h" />
     <ClInclude Include="src\Platform\Windows\WindowsInput.h" />
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h" />
     <ClInclude Include="src\astra_pch.h" />
@@ -277,11 +275,10 @@ IF EXIST res\fonts\**.ttf\ (xcopy /Q /E /Y /I res\fonts\**.ttf ..\bin\windows-Di
     <ClInclude Include="vendor\dr_lib\dr_lib\dr_mp3.h" />
     <ClInclude Include="vendor\dr_lib\dr_lib\dr_wav.h" />
     <ClInclude Include="vendor\stb_image\stb_image\stb_image.h" />
+    <ClInclude Include="vendor\stb_image\stb_image\stb_image_write.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Astra\Application.cpp" />
-    <ClCompile Include="src\Astra\graphics\entities\utility\Mesh.cpp" />
-    <ClCompile Include="src\Astra\graphics\entities\utility\Model.cpp" />
     <ClCompile Include="src\Astra\Log.cpp" />
     <ClCompile Include="src\Astra\audio\AudioController.cpp" />
     <ClCompile Include="src\Astra\audio\AudioSource.cpp" />
@@ -293,12 +290,13 @@ IF EXIST res\fonts\**.ttf\ (xcopy /Q /E /Y /I res\fonts\**.ttf ..\bin\windows-Di
     <ClCompile Include="src\Astra\graphics\buffers\VertexArray.cpp" />
     <ClCompile Include="src\Astra\graphics\buffers\WaterFrameBuffer.cpp" />
     <ClCompile Include="src\Astra\graphics\entities\Camera.cpp" />
-    <ClCompile Include="src\Astra\graphics\entities\Entity.cpp" />
     <ClCompile Include="src\Astra\graphics\entities\Light.cpp" />
     <ClCompile Include="src\Astra\graphics\entities\Spatial.cpp" />
     <ClCompile Include="src\Astra\graphics\entities\terrains\HeightGenerator.cpp" />
     <ClCompile Include="src\Astra\graphics\entities\terrains\Terrain.cpp" />
     <ClCompile Include="src\Astra\graphics\entities\terrains\WaterTile.cpp" />
+    <ClCompile Include="src\Astra\graphics\entities\utility\Mesh.cpp" />
+    <ClCompile Include="src\Astra\graphics\entities\utility\Model.cpp" />
     <ClCompile Include="src\Astra\graphics\gizmos\Gizmo.cpp" />
     <ClCompile Include="src\Astra\graphics\gizmos\GizmoController.cpp" />
     <ClCompile Include="src\Astra\graphics\guis\Gui.cpp" />
