--- a/Astra/Astra.vcxproj.filters
+++ b/Astra/Astra.vcxproj.filters
@@ -198,9 +198,6 @@
     <ClInclude Include="src\Astra\graphics\entities\utility\Mesh.h">
       <Filter>src\Astra\graphics\entities\utility</Filter>
     </ClInclude>
-    <ClInclude Include="src\Astra\graphics\entities\utility\Model.h">
-      <Filter>src\Astra\graphics\entities\utility</Filter>
-    </ClInclude>
     <ClInclude Include="src\Astra\graphics\gizmos\Gizmo.h">
       <Filter>src\Astra\graphics\gizmos</Filter>
     </ClInclude>
@@ -486,6 +483,9 @@
     <ClInclude Include="vendor\stb_image\stb_image\stb_image_write.h">
       <Filter>vendor\stb_image\stb_image</Filter>
     </ClInclude>
+    <ClInclude Include="src\Astra\graphics\entities\Model.h">
+      <Filter>src\Astra\graphics\entities\utility</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Astra\Application.cpp">
@@ -540,9 +540,6 @@
       <Filter>src\Astra\graphics\entities\terrains</Filter>
     </ClCompile>
     <ClCompile Include="src\Astra\graphics\entities\utility\Mesh.cpp">
-      <Filter>src\Astra\graphics\entities\utility</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Astra\graphics\entities\utility\Model.cpp">
       <Filter>src\Astra\graphics\entities\utility</Filter>
     </ClCompile>
     <ClCompile Include="src\Astra\graphics\gizmos\Gizmo.cpp">
@@ -697,6 +694,9 @@
     </ClCompile>
     <ClCompile Include="vendor\stb_image\stb_image\stb_image.cpp">
       <Filter>vendor\stb_image\stb_image</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Astra\graphics\entities\Model.cpp">
+      <Filter>src\Astra\graphics\entities\utility</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
