--- a/Astra/Astra.vcxproj
+++ b/Astra/Astra.vcxproj
@@ -153,7 +153,15 @@ IF EXIST res\fonts\**.ttf\ (xcopy /Q /E /Y /I res\fonts\**.ttf ..\bin\windows-Di
     <ClInclude Include="src\Astra\Application.h" />
     <ClInclude Include="src\Astra\Core.h" />
     <ClInclude Include="src\Astra\EntryPoint.h" />
+    <ClInclude Include="src\Astra\graphics\entities\utility\Animation.h" />
+    <ClInclude Include="src\Astra\graphics\entities\utility\Animator.h" />
+    <ClInclude Include="src\Astra\graphics\entities\utility\AssimpReader.h" />
+    <ClInclude Include="src\Astra\graphics\entities\utility\Bone.h" />
+    <ClInclude Include="src\Astra\graphics\entities\utility\BoneInfo.h" />
+    <ClInclude Include="src\Astra\graphics\entities\utility\BoneReader.h" />
+    <ClInclude Include="src\Astra\graphics\entities\utility\KeyStructs.h" />
     <ClInclude Include="src\Astra\Log.h" />
+    <ClInclude Include="src\Astra\math\Quat.h" />
     <ClInclude Include="src\Astra\Scene.h" />
     <ClInclude Include="src\Astra\Window.h" />
     <ClInclude Include="src\Astra\audio\AudioController.h" />
@@ -279,6 +287,9 @@ IF EXIST res\fonts\**.ttf\ (xcopy /Q /E /Y /I res\fonts\**.ttf ..\bin\windows-Di
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Astra\Application.cpp" />
+    <ClCompile Include="src\Astra\graphics\entities\utility\Animation.cpp" />
+    <ClCompile Include="src\Astra\graphics\entities\utility\Animator.cpp" />
+    <ClCompile Include="src\Astra\graphics\entities\utility\Bone.cpp" />
     <ClCompile Include="src\Astra\Log.cpp" />
     <ClCompile Include="src\Astra\audio\AudioController.cpp" />
     <ClCompile Include="src\Astra\audio\AudioSource.cpp" />
@@ -338,6 +349,7 @@ IF EXIST res\fonts\**.ttf\ (xcopy /Q /E /Y /I res\fonts\**.ttf ..\bin\windows-Di
     <ClCompile Include="src\Astra\layers\Layer3D.cpp" />
     <ClCompile Include="src\Astra\layers\LayerStack.cpp" />
     <ClCompile Include="src\Astra\math\Mat4.cpp" />
+    <ClCompile Include="src\Astra\math\Quat.cpp" />
     <ClCompile Include="src\Astra\math\Vec2.cpp" />
     <ClCompile Include="src\Astra\math\Vec3.cpp" />
     <ClCompile Include="src\Astra\math\Vec4.cpp" />
