--- a/Astra/Astra.vcxproj
+++ b/Astra/Astra.vcxproj
@@ -161,8 +161,10 @@ IF EXIST res\fonts\**.ttf\ (xcopy /Q /E /Y /I res\fonts\**.ttf ..\bin\windows-Di
     <ClInclude Include="src\Astra\graphics\entities\utility\BoneInfo.h" />
     <ClInclude Include="src\Astra\graphics\entities\utility\BoneReader.h" />
     <ClInclude Include="src\Astra\graphics\entities\utility\KeyStructs.h" />
+    <ClInclude Include="src\Astra\graphics\Resource.h" />
     <ClInclude Include="src\Astra\Log.h" />
     <ClInclude Include="src\Astra\math\Quat.h" />
+    <ClInclude Include="src\Astra\Res.h" />
     <ClInclude Include="src\Astra\Scene.h" />
     <ClInclude Include="src\Astra\Window.h" />
     <ClInclude Include="src\Astra\audio\AudioController.h" />
@@ -290,6 +292,7 @@ IF EXIST res\fonts\**.ttf\ (xcopy /Q /E /Y /I res\fonts\**.ttf ..\bin\windows-Di
     <ClCompile Include="src\Astra\graphics\entities\utility\Animation.cpp" />
     <ClCompile Include="src\Astra\graphics\entities\utility\Animator.cpp" />
     <ClCompile Include="src\Astra\graphics\entities\utility\Bone.cpp" />
+    <ClCompile Include="src\Astra\graphics\Resource.cpp" />
     <ClCompile Include="src\Astra\Log.cpp" />
     <ClCompile Include="src\Astra\audio\AudioController.cpp" />
     <ClCompile Include="src\Astra\audio\AudioSource.cpp" />
